feat: agent selection page, transition crash fix, new app icon
- Add agent selection page between auth and install steps with OpenClaw
  (installable) and OwliaBot (coming soon) options
- Reorder setup flow: Auth → Agent Select → Install → Channel
- Fix transition crash: LinkedList.removeFirst() desugared to Java 21
  List.removeFirst() which doesn't exist on Android runtime
- Fix last-step transition: goToNextStep() now starts DashboardActivity
  before finish() instead of leaving empty back stack
- Add defensive lifecycle guards (isAdded/isResumed) in fragment navigation
- Fix ChannelFragment service binding: move from onViewCreated to onStart
- Guard InstallFragment auto-start: only begin when fragment is resumed
- Replace app icon with BotDrop logo at all mipmap densities + adaptive

Generated with [Claude Code](https://claude.ai/code)
via [Happy](https://happy.engineering)

Co-Authored-By: Claude <noreply@anthropic.com>
Co-Authored-By: Happy <yesreply@happy.engineering>